--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -82,7 +82,8 @@ lab.specimen.type.sputum = la53sCPPkdB
 
 lab.specimen.collection.time = cWj7RImzE1X
 lab.specimen.date.received = gTPmJrHg0O1
-lab.speciment.barcode = kkD26RljqPY
+## This field is called swab details in dhis2
+lab.specimen.barcode = kkD26RljqPY
 lab.specimen.facility = RVKKZy9ge6R
 lab.covid.number = ZK9EGtKOwP2
 
@@ -137,7 +138,7 @@ lab.hospitalisation = IjUYM43Rair
 lab.outcome = iIyhVUhhOVT
 
 lab.submitter.city = VcDbszN95Fd
-lab.submitter.contact.number = Egr73rTVvY1
+lab.submitter.contact = Egr73rTVvY1
 lab.submitter.email = NGhZvedj9Nl
 lab.submitter.facility = Z5Aztf7POY9
 lab.submitter.firstname = wbpmunEoyRr
