--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -35,6 +35,14 @@ dhis2.api.program.unit = zwts3rCXPDU
 # dhis2 program stage for Live Lab result form
 dhis2.api.program.stage = nIaEdUY97YD
 
+# Labe report token for localtesting
+redcap.lab.report.token = 2F431E01FC9E7119685FEE6093380394
+redcap.api.url = http://localhost/redcap/api/
+
+# Configuration for live system
+#redcap.lab.report.token = 2F431E01FC9E7119685FEE6093380394
+#redcap.api.url = https://ehealth.ub.bw/redcap/api/
+
 # Redcap project ids
 lab.report.pid=352
 lab.reception.pid=362
