--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -26,8 +26,8 @@ dhis2.api.url = https://dhis2sms.gov.bw/covid/api
 # DHIS2 program
 dhis2.api.program = HR4C8VTwGuo
 
-# DHIS2 program unit
-dhis2.api.program.unit = zwts3rCXPDU
+# DHIS2 program unit for MOHW
+dhis2.mohw.org.unit = zwts3rCXPDU
 
 # dhis2 program stage for testing Lab result form
 # dhis2.api.program.stage = DwDiqLrqYQL
