--- a/pom.xml
+++ b/pom.xml
@@ -482,9 +482,9 @@
 				</jdbc.url>
 				<!-- Enter id/password for the database connection -->
 				<jdbc.username>
-					root
+					testuser
 				</jdbc.username>
-				<jdbc.password>H3@lth</jdbc.password>
+				<jdbc.password>TestUser123!</jdbc.password>
 				<!-- Change exception sorter class name for appropriate database For 
 					H2 use: org.jboss.resource.adapter.jdbc.vendor.DummyExceptionSorter For MySQL 
 					use: org.jboss.resource.adapter.jdbc.vendor.MySQLExceptionSorter For Hypersonic 
