--- a/springws/pom.xml
+++ b/springws/pom.xml
@@ -50,6 +50,11 @@
 		    <artifactId>httpclient</artifactId>
 		    <version>4.5.12</version>
 		</dependency>
+		
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
