--- a/pom.xml
+++ b/pom.xml
@@ -478,7 +478,7 @@
 					For Postgres use: jdbc:postgresql://localhost/dhislink For Sybase use: jdbc:sybase:Tds:localhost:5000/dhislink?JCONNECT_VERSION=6 
 					For SapDB use: jdbc:sapdb://127.0.0.1/dhislink For Progress use: jdbc:JdbcProgress:T:localhost:3305:dhislink -->
 				<jdbc.url>
-					jdbc:mysql://localhost:3306/redcap_UB
+					jdbc:mysql://localhost:3306/redcap
 				</jdbc.url>
 				<!-- Enter id/password for the database connection -->
 				<jdbc.username>
