--- a/core/pom.xml
+++ b/core/pom.xml
@@ -34,7 +34,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>   
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
         <!-- Uncomment below if using JDBC or Test features>
         <dependency>
             <groupId>org.springframework</groupId>
