--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -7,6 +7,10 @@ spring.datasource.url= jdbc:mysql://localhost:3306/redcap_UB?useSSL=false&server
 spring.datasource.username= root
 spring.datasource.password= H3@lth
 
+## App Properties
+app.jwtSecret= P"2MiC,+2:_+|@.q\..Rs1$bW/cMznFTmFI'|OzNjbcR\D*D;4Uf4SZZw0lIqc,bE6\~HQ
+app.jwtExpirationInMs = 604800000
+
 ## Hibernate Properties
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -14,7 +18,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 
 ## Hibernate Logging
-# logging.level.org.hibernate.SQL= DEBUG
+logging.level.org.hibernate.SQL= DEBUG
 
 # Initialize the datasource with available DDL and DML scripts
 spring.datasource.initialization-mode=always
