Added code to search batches

--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -41,6 +41,8 @@ dhis2.api.program.stage = nIaEdUY97YD
 
 # Labe report token for localtesting
 redcap.lab.report.token = 2F431E01FC9E7119685FEE6093380394
+redcap.lab.extraction.token = 2F431E01FC9E7119685FEE6093380394
+redcap.lab.report.token = 2F431E01FC9E7119685FEE6093380394
 redcap.api.url = http://localhost/redcap/api/
 
 # Configuration for live system
