Set up the detection form

--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -41,8 +41,9 @@ dhis2.api.program.stage = nIaEdUY97YD
 
 # Labe report token for localtesting
 redcap.lab.report.token = 2F431E01FC9E7119685FEE6093380394
-redcap.lab.extraction.token = 2F431E01FC9E7119685FEE6093380394
-redcap.lab.report.token = 2F431E01FC9E7119685FEE6093380394
+redcap.lab.extraction.token = 6A98E88ACB5A45AB804D575EEB9591D2
+redcap.lab.resulting.token = 2DEDD1790A63900C2F356683CC0CFBB9
+redcap.lab.reception.token = 9DC9D58A744672ADE1E5D9E4C6AFA9E7
 redcap.api.url = http://localhost/redcap/api/
 
 # Configuration for live system
