Added route guard

--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.password= H3@lth
 
 ## App Properties
 app.jwtSecret= P"2MiC,+2:_+|@.q\..Rs1$bW/cMznFTmFI'|OzNjbcR\D*D;4Uf4SZZw0lIqc,bE6\~HQ
-app.jwtExpirationInMs = 604800000
+app.jwtExpirationInMs = 500000
 
 ## Hibernate Properties
 
