Added refresh of tokens

--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,7 @@
 <classpath>
-  <classpathentry kind="src" path="mda/src/main/uml"/>
   <classpathentry kind="src" path="springws/src/main/java"/>
   <classpathentry kind="src" path="springws/src/test/java"/>
+  <classpathentry kind="src" path="mda/src/main/uml"/>
   <classpathentry kind="src" path="core/src/main/java"/>
   <classpathentry kind="src" path="core/target/src/main/java"/>
   <classpathentry kind="src" path="common/target/src/main/java"/>
@@ -16,6 +16,7 @@
   <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/datatype/jackson-datatype-jdk8/2.10.2/jackson-datatype-jdk8-2.10.2.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/datatype/jackson-datatype-jsr310/2.10.2/jackson-datatype-jsr310-2.10.2.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/fasterxml/jackson/module/jackson-module-parameter-names/2.10.2/jackson-module-parameter-names-2.10.2.jar"/>
+  <classpathentry kind="var" path="M2_REPO/com/fasterxml/uuid/java-uuid-generator/4.0.1/java-uuid-generator-4.0.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/jayway/jsonpath/json-path/2.4.0/json-path-2.4.0.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/sun/istack/istack-commons-runtime/3.0.7/istack-commons-runtime-3.0.7.jar"/>
   <classpathentry kind="var" path="M2_REPO/com/sun/xml/fastinfoset/FastInfoset/1.2.15/FastInfoset-1.2.15.jar"/>
