--- a/springws/pom.xml
+++ b/springws/pom.xml
@@ -50,7 +50,11 @@
 		    <artifactId>httpclient</artifactId>
 		    <version>4.5.12</version>
 		</dependency>
-		
+		<dependency>
+		    <groupId>com.fasterxml.uuid</groupId>
+		    <artifactId>java-uuid-generator</artifactId>
+		    <version>4.0.1</version>
+		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
