Added timeout feature

--- a/angular/package.json
+++ b/angular/package.json
@@ -22,10 +22,14 @@
     "@angular/platform-browser": "~9.0.7",
     "@angular/platform-browser-dynamic": "~9.0.7",
     "@angular/router": "~9.0.7",
+    "@ng-idle/core": "^8.0.0-beta.4",
+    "@ng-idle/keepalive": "^8.0.0-beta.4",
+    "angular2-moment": "^1.9.0",
     "bootstrap": "^4.5.0",
     "environments": "^1.2.2",
     "jquery": "^3.5.1",
     "jwt-decode": "^2.2.0",
+    "ngx-bootstrap": "^5.6.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.13.0",
