--- a/pom.xml
+++ b/pom.xml
@@ -478,13 +478,13 @@
 					For Postgres use: jdbc:postgresql://localhost/dhislink For Sybase use: jdbc:sybase:Tds:localhost:5000/dhislink?JCONNECT_VERSION=6 
 					For SapDB use: jdbc:sapdb://127.0.0.1/dhislink For Progress use: jdbc:JdbcProgress:T:localhost:3305:dhislink -->
 				<jdbc.url>
-					jdbc:mysql://localhost:3306/redcap
+					jdbc:mysql://localhost:3306/redcap_UB
 				</jdbc.url>
 				<!-- Enter id/password for the database connection -->
 				<jdbc.username>
-					testuser
+					root
 				</jdbc.username>
-				<jdbc.password>TestUser123!</jdbc.password>
+				<jdbc.password>H3@lth</jdbc.password>
 				<!-- Change exception sorter class name for appropriate database For 
 					H2 use: org.jboss.resource.adapter.jdbc.vendor.DummyExceptionSorter For MySQL 
 					use: org.jboss.resource.adapter.jdbc.vendor.MySQLExceptionSorter For Hypersonic 
