--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -3,6 +3,12 @@
 #spring.datasource.username= testuser
 #spring.datasource.password= TestUser123!
 
+#SSL Key Info
+security.require-ssl=true
+server.ssl.key-store-password=OV+x1lm]zTLi
+server.ssl.key-store=/root/service/dhislink.p12
+server.ssl.key-store-type=PKCS12
+
 spring.datasource.url= jdbc:mysql://localhost:3306/redcap_UB?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username= root
 spring.datasource.password= H3@lth
