--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+# In properties file
+logging.level.org.springframework=ERROR 
+
+# Output to a temp_folder/file
+logging.file=/var/log/dhislink.log
+
+# Logging pattern for file
+logging.pattern.file= %d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%
+
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 #spring.datasource.url= jdbc:mysql://localhost:3306/redcap?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 #spring.datasource.username= testuser
