--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.url= jdbc:mysql://localhost:3306/redcap_UB?useSSL=false&server
 spring.datasource.username= root
 spring.datasource.password= H3@lth
 
+logging.level=DEBUG
+
 ## App Properties
 app.jwtSecret= P"2MiC,+2:_+|@.q\..Rs1$bW/cMznFTmFI'|OzNjbcR\D*D;4Uf4SZZw0lIqc,bE6\~HQ
 app.jwtExpirationInMs = 5000000
@@ -183,7 +185,6 @@ patient.omang = he05i8FUwu3
 patient.birth.date = NI0QRzJvQ0k
 patient.passport = bxdZotXrBDV
 
-logging.level.org.springframework.web=DEBUG
 
 #### DHIS 2 Test Lab form field ids
 #lab.covid.number = ZK9EGtKOwP2
