--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 #SSL Key Info
-security.require-ssl=true
-server.ssl.key-store-password=OV+x1lm]zTLi
-server.ssl.key-store=/root/service/dhislink.p12
-server.ssl.key-store-type=PKCS12
+#security.require-ssl=true
+#server.ssl.key-store-password=OV+x1lm]zTLi
+#server.ssl.key-store=/root/service/dhislink.p12
+#server.ssl.key-store-type=PKCS12
 
 spring.datasource.url= jdbc:mysql://localhost:3306/redcap_UB?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username= root
 spring.datasource.password= H3@lth
 
-logging.level=DEBUG
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=ERROR
+logging.level.bw.ub.ehealth=DEBUG
 
 ## App Properties
 app.jwtSecret= P"2MiC,+2:_+|@.q\..Rs1$bW/cMznFTmFI'|OzNjbcR\D*D;4Uf4SZZw0lIqc,bE6\~HQ
