--- a/angular/package.json
+++ b/angular/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.0.7",
     "@ng-idle/core": "^8.0.0-beta.4",
     "@ng-idle/keepalive": "^8.0.0-beta.4",
+    "@rxweb/reactive-form-validators": "^2.0.0-rc6",
     "angular2-moment": "^1.9.0",
     "bootstrap": "^4.5.0",
     "environments": "^1.2.2",
