--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #server.ssl.key-store=/root/service/dhislink.p12
 #server.ssl.key-store-type=PKCS12
 
-spring.datasource.url= jdbc:mysql://localhost:3306/redcap_UB?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url= jdbc:mysql://localhost:3306/redcap_UB?useSSL=false&serverTimezone=Africa/Gaborone&useLegacyDatetimeCode=false
 spring.datasource.username= root
 spring.datasource.password= H3@lth
 
