--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #SSL Key Info
-#security.require-ssl=true
-#server.ssl.key-store-password=OV+x1lm]zTLi
-#server.ssl.key-store=/root/service/dhislink.p12
-#server.ssl.key-store-type=PKCS12
+security.require-ssl=true
+server.ssl.key-store-password=OV+x1lm]zTLi
+server.ssl.key-store=/root/service/dhislink.p12
+server.ssl.key-store-type=PKCS12
 
 spring.datasource.url= jdbc:mysql://localhost:3306/redcap_UB?useSSL=false&serverTimezone=Africa/Gaborone&useLegacyDatetimeCode=false
 spring.datasource.username= root
 spring.datasource.password= H3@lth
 
-app.local = true
+app.live = true
 
 logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
