Changes completed and css

--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -30,6 +30,7 @@ spring.datasource.initialization-mode=always
 
 # The dhis webservice values
 dhis2.api.url = https://dhis2sms.gov.bw/covid/api
+# dhis2.api.url = https://play.dhis2.org/dev
 
 # DHIS2 program
 dhis2.api.program = HR4C8VTwGuo
