refactored searching code

--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #SSL Key Info
-security.require-ssl=true
-server.ssl.key-store-password=OV+x1lm]zTLi
-server.ssl.key-store=/root/service/dhislink.p12
-server.ssl.key-store-type=PKCS12
+#security.require-ssl=true
+#server.ssl.key-store-password=OV+x1lm]zTLi
+#server.ssl.key-store=/root/service/dhislink.p12
+#server.ssl.key-store-type=PKCS12
 
 spring.datasource.url= jdbc:mysql://localhost:3306/redcap_UB?useSSL=false&serverTimezone=Africa/Gaborone&useLegacyDatetimeCode=false
 spring.datasource.username= root
 spring.datasource.password= H3@lth
 
-app.live = true
+app.live = false
 
 logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
@@ -101,9 +101,8 @@ HR4C8VTwGuo.nIaEdUY97YD.lab.specimen.type.sputum = la53sCPPkdB
 
 HR4C8VTwGuo.nIaEdUY97YD.lab.specimen.date.collection = ss55YFQKAjR
 HR4C8VTwGuo.nIaEdUY97YD.lab.specimen.collection.time = cWj7RImzE1X
-HR4C8VTwGuo.nIaEdUY97YD.lab.specimen.date.received = gTPmJrHg0O1
 ## This field is called swab details in dhis2
-HR4C8VTwGuo.nIaEdUY97YD.lab.specimen.barcode = kkD26RljqPY
+#HR4C8VTwGuo.nIaEdUY97YD.lab.specimen.barcode = kkD26RljqPY
 HR4C8VTwGuo.nIaEdUY97YD.lab.specimen.facility = RVKKZy9ge6R
 HR4C8VTwGuo.nIaEdUY97YD.lab.covid.number = ZK9EGtKOwP2
 
@@ -141,14 +140,12 @@ HR4C8VTwGuo.nIaEdUY97YD.lab.underlying.unknown = huEH0CKVdDJ
 HR4C8VTwGuo.nIaEdUY97YD.lab.underlying.pregnancy = zMgpADR7637
 
 HR4C8VTwGuo.nIaEdUY97YD.lab.id.number = toL5mwpHthJ
-HR4C8VTwGuo.nIaEdUY97YD.lab.results = KhDw18Q6Y8Z
 HR4C8VTwGuo.nIaEdUY97YD.lab.results.entered.by = lXteQ6YQxQW
 HR4C8VTwGuo.nIaEdUY97YD.lab.results.verified.by = CMfdUZNHk5w
 HR4C8VTwGuo.nIaEdUY97YD.lab.result.date.verified = mPRVLnD8VvN
 HR4C8VTwGuo.nIaEdUY97YD.lab.results.turnaround.time = wIUd3y3MlEW
 HR4C8VTwGuo.nIaEdUY97YD.lab.results.authorised.by = FixqUUMfbnU
 HR4C8VTwGuo.nIaEdUY97YD.lab.results.date.authorised = QDimOE2d8mV
-HR4C8VTwGuo.nIaEdUY97YD.lab.results.date.entered = mBRAHKsozJt
 
 HR4C8VTwGuo.nIaEdUY97YD.lab.animal.type = OHO0RD9iAyB
 HR4C8VTwGuo.nIaEdUY97YD.lab.animal.type.exposure.date = T1V7nv6YRtm
@@ -224,12 +221,11 @@ yVAVueRALgp.rQeSbwNwWRJ.lab.specimen.type.np = wHKhm9BSqFr
 yVAVueRALgp.rQeSbwNwWRJ.lab.specimen.type.other = ZZ7Q34tJb4y
 yVAVueRALgp.rQeSbwNwWRJ.lab.specimen.type.sputum = la53sCPPkdB
 
+yVAVueRALgp.rQeSbwNwWRJ.lab.specimen.type = pAXEm813SPC
+
 yVAVueRALgp.rQeSbwNwWRJ.lab.specimen.date.collection = YqbWyGAUHMf
 yVAVueRALgp.rQeSbwNwWRJ.lab.specimen.collection.time = V8GtcFnlk8H
-yVAVueRALgp.rQeSbwNwWRJ.lab.specimen.date.received = gTPmJrHg0O1
-yVAVueRALgp.rQeSbwNwWRJ.lab.specimen.time.received = gTPmJrHg0O1
 ## This field is called swab details in dhis2
-yVAVueRALgp.rQeSbwNwWRJ.lab.specimen.barcode = kkD26RljqPY
 yVAVueRALgp.rQeSbwNwWRJ.lab.specimen.facility = C12v7XsfVRq
 
 yVAVueRALgp.rQeSbwNwWRJ.lab.test.avian = Ye3ZwzlZbKj
@@ -248,11 +244,20 @@ yVAVueRALgp.rQeSbwNwWRJ.patient.city = hinQTuKTCfx
 yVAVueRALgp.rQeSbwNwWRJ.patient.country.visited = g8x13Fu9M6s
 yVAVueRALgp.rQeSbwNwWRJ.patient.sex = oindugucx72
 yVAVueRALgp.rQeSbwNwWRJ.patient.phone = zJ0IaT0yGqj
-yVAVueRALgp.rQeSbwNwWRJ.patient.omang = c0zyxnYhyHO
+yVAVueRALgp.rQeSbwNwWRJ.patient.identification = c0zyxnYhyHO
 yVAVueRALgp.rQeSbwNwWRJ.patient.birth.date = NI0QRzJvQ0k
 
-yVAVueRALgp.rQeSbwNwWRJ.lab.results = KhDw18Q6Y8Z
-yVAVueRALgp.rQeSbwNwWRJ.lab.results.date.entered = mBRAHKsozJt
+#yVAVueRALgp.rQeSbwNwWRJ.lab.results = KhDw18Q6Y8Z
+lab.results = KhDw18Q6Y8Z
+lab.results.date.entered = mBRAHKsozJt
+lab.specimen.barcode = kkD26RljqPY
+lab.specimen.date.collection = ss55YFQKAjR
+lab.specimen.collection.time = cWj7RImzE1X
+lab.specimen.date.received = gTPmJrHg0O1
+lab.specimen.time.received = R5VhM0J6yXd
+yVAVueRALgp.rQeSbwNwWRJ.patient.receive.sms = GAGFSUXvQYD
+yVAVueRALgp.rQeSbwNwWRJ.lab.specimen.submitter = pAXEm813SPC
+#yVAVueRALgp.rQeSbwNwWRJ.lab.results.date.entered = mBRAHKsozJt
 
 ## Tracked Entity Attributes
 patient.nationality = hBcoBCZBWFb
@@ -273,3 +278,4 @@ patient.departure.date = n64VqoNhkjF
 patient.omang = he05i8FUwu3
 patient.birth.date = NI0QRzJvQ0k
 patient.passport = bxdZotXrBDV
+patient.identification = c0zyxnYhyHO
