--- a/springws/src/main/resources/application.properties
+++ b/springws/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 #SSL Key Info
-#security.require-ssl=true
-#server.ssl.key-store-password=OV+x1lm]zTLi
-#server.ssl.key-store=/root/service/dhislink.p12
-#server.ssl.key-store-type=PKCS12
+security.require-ssl=true
+server.ssl.key-store-password=OV+x1lm]zTLi
+server.ssl.key-store=/root/service/dhislink.p12
+server.ssl.key-store-type=PKCS12
 
 spring.datasource.url= jdbc:mysql://localhost:3306/redcap_UB?useSSL=false&serverTimezone=Africa/Gaborone&useLegacyDatetimeCode=false
 spring.datasource.username= root
 spring.datasource.password= H3@lth
 
-app.live = false
+app.live = true
 
 logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
@@ -256,7 +256,7 @@ lab.specimen.collection.time = cWj7RImzE1X
 lab.specimen.date.received = gTPmJrHg0O1
 lab.specimen.time.received = R5VhM0J6yXd
 yVAVueRALgp.rQeSbwNwWRJ.patient.receive.sms = GAGFSUXvQYD
-yVAVueRALgp.rQeSbwNwWRJ.lab.specimen.submitter = pAXEm813SPC
+yVAVueRALgp.rQeSbwNwWRJ.lab.specimen.submitter = TvmFaoVRDXR
 #yVAVueRALgp.rQeSbwNwWRJ.lab.results.date.entered = mBRAHKsozJt
 
 ## Tracked Entity Attributes
